# vectis

./: .gitignore  README.md  pyproject.toml
docs/: getting-started.md
docs/advanced/: join-configuration.md  join-patterns.md  stream-joins.md
docs/concepts/: communication.md  components.md  configuration.md  execution-modes.md
docs/guides/: best-practices.md  error-handling.md  testing.md
docs/tutorials/: 01-simple-pipeline.md  02-custom-components.md  03-multiprocess.md  04-distributed.md
examples/: __init__.py
examples/custom_component_type/: README.md  __init__.py  components.py  pipeline.yaml  run.py
examples/distributed_example/: README.md  __init__.py  components.py  pipeline.yaml  pipeline_control_channel.yaml  pipeline_retry_backoff.yaml  run.py
examples/etl_pipeline/: README.md  __init__.py  components.py  payloads.py  pipeline.yaml  run.py
examples/join_enrichment/: README.md  __init__.py  components.py  pipeline.yaml  run.py
examples/simple_pipeline/: README.md  __init__.py  components.py  pipeline.yaml  run.py
src/flowforge/: __init__.py
src/flowforge/communication/: factory.py
src/flowforge/communication/channels/: multiprocess.py  zmq.py
src/flowforge/communication/serialization/: msgpack_serializer.py
src/flowforge/communication/sync/: control.py
src/flowforge/components/: __init__.py  decorators.py  factory.py  mixins.py  types.py
src/flowforge/components/joining/: __init__.py  buffer.py  config.py  joiner.py
src/flowforge/config/: loader.py  models.py
src/flowforge/engine/: engine.py  topology.py
src/vectis/: __init__.py
src/vectis/communication/: __init__.py  enums.py  factory.py  protocols.py
src/vectis/communication/channels/: __init__.py  inprocess.py  multiplex.py  multiprocess.py  zmq.py
src/vectis/communication/groups/: __init__.py  competing.py  fanout.py
src/vectis/communication/serialization/: __init__.py  json_serializer.py  msgpack_serializer.py
src/vectis/communication/sync/: __init__.py  control.py  retry.py
src/vectis/components/: __init__.py  base.py  decorators.py  factory.py  mixins.py  protocols.py  registry.py  types.py
src/vectis/components/joining/: __init__.py  buffer.py  config.py  joiner.py
src/vectis/config/: __init__.py  loader.py  models.py
src/vectis/engine/: __init__.py  context.py  engine.py  topology.py
src/vectis/exceptions/: __init__.py  errors.py
src/vectis/messages/: __init__.py  message.py
tests/: conftest.py  test_channels.py  test_components.py  test_config.py  test_control_channels.py  test_engine.py  test_enums.py  test_examples.py  test_exceptions.py  test_joining.py  test_messages.py  test_multiprocess_channels.py  test_protocols.py  test_retry.py  test_zmq_channels.py
tests/integration/: __init__.py  _mp_test_components.py  test_distributed_e2e.py  test_join_pipelines.py  test_mixed_topology.py  test_multiprocess_e2e.py  test_pipelines.py
