[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectis"
version = "0.1.0"
description = "Async component pipeline framework for data processing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Artur", email = "farriolsartur@gmail.com" }
]
keywords = ["async", "pipeline", "data-processing", "components", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/farriolsartur/vectis"
Repository = "https://github.com/farriolsartur/vectis"
Issues = "https://github.com/farriolsartur/vectis/issues"

[project.optional-dependencies]
msgpack = ["msgpack>=1.0"]
distributed = ["pyzmq>=25.0"]
joins = ["jsonpath-ng>=1.5"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
all = [
    "vectis[msgpack,distributed,joins,dev]",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "article*.md",
    "docs/",
    "examples/",
    "tests/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vectis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["vectis"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]
